k3s/cluster/applications/home-assistant/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: lapi
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2026.10.0@sha256:1b64d38f38d922bf9d59336451fd6453e1d614f934456af4ee3d2a51061be3a4
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 180
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8123
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: "768Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app: home-assistant
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant-policy
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - protocol: TCP
          port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    tailscale.com/hostname: "home-assistant"
    tailscale.com/tags: "tag:k8s,tag:app-home-assistant"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: home-assistant
      port:
        number: 8123
  tls:
    - hosts:
        - home-assistant
